--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Merry Christmas, My Love</title>
+    <title>Merry Christmas</title>
     <meta name="description" content="A special Christmas message for someone I love" />
     <meta name="author" content="With Love" />
 
