--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A special Christmas message for someone I love" />
     <meta name="author" content="With Love" />
 
-    <meta property="og:title" content="Merry Christmas, My Love" />
+    <meta property="og:title" content="Merry Christmas" />
     <meta property="og:description" content="A special Christmas message for someone I love" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
